2.1.2-beta:
- Fixed a problem with the tablet making an ugly sound when opening the gui. Thanks Darkere!
- Fixed a crash in the crafter

2.1.1-beta:
- Dependency fix
- Fixed a hard dependency on TOP

2.1.0-beta:
- Re-added TOP support for the screen, matter receiver, matter transmitter and the simple dialer
- Various model and language file fixes
- Better item tooltips
- The simple dialer actually works now
- Ported all the logic blocks
- The inventory checker now supports the new tags instead of ore dictionary
- The 'dump storage' screen module works now
- The crafter should now support 'tags' better (for crafting)
- Moved the dump and storage control modules from RFTools Utility to RFTools Storage
- The [ and ] keys work again for changing the advanced porter target
- New 'Redstone Information' item that can be used to access wireless redstone channels through the tablet
- New 'Screen Link' item that can be linked to a screen and put in the tablet
- Redstone channels can now have names. Use the new gui of the redstone transmitter to set the name
- Fixed the recipes for the vanilla recipe book
- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)

2.0.1-alpha:
- Fixed the simple dialer model
- Fixed a problem in the crafter where the filter slot would accept anything with item automation
- Re-implemented the filter module for the crafter

1.2.14:
- Disabled truetype for now until the forge bug has been resolved

1.2.13:
- Updates to latest McJtyLib

1.2.12:
- Fixed how automation/gui item handling works for the crafter. Should fix all corner cases
- Fixed the filter slot in the crafter being mapped to the first output slot

1.2.11:
- Inserting/extracting from the crafter (using hopper or whatever) should now be correct

1.2.10:
- The advanced porter gui works again
- The teleportprobe gui works again
- Avoid a rare crash during model registration